syntax = "proto3";

package laas.router.v1;

option go_package = "git.xdea.xyz/Turing/router/internal/conf;conf";

message Upstream {
  repeated UpstreamConfig configs = 1;
}

message UpstreamConfig {
  string name = 1;
  repeated Model models = 2;
  oneof config {
    LaaSConfig laas = 100;
    OpenAIConfig openai = 101;
    GoogleConfig google = 102;
    AnthropicConfig anthropic = 103;
  }
}

message Model {
  string id = 1;
  string name = 2;
  string provider = 3;
}

message LaaSConfig {
  string endpoint = 1;
}

message OpenAIConfig {
  string api_key = 1;
  string base_url = 2;
  // Whether to merge contents into a single part
  bool merge_content = 3;
}

message GoogleConfig {
  string api_key = 1;
}

message AnthropicConfig {
  string api_key = 1;
  string base_url = 2;
  // Whether to merge the system prompt into messages
  bool merge_system = 3;
}